--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "vscode-gruvbox-material-p-dark",
     "displayName": "Gruvbox Material P Dark",
     "description": "Dark gruvbox theme with material palette and some color improvements",
+    "publisher": "PetrMaliarov",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.58.0"
@@ -11,8 +12,8 @@
     ],
     "author": "Petr Maliarov (https://github.com/e11ni)",
     "repository": {
-      "type": "git",
-      "url": "https://github.com/e11ni/vscode-gruvbox-material-p-dark.git"
+        "type": "git",
+        "url": "https://github.com/e11ni/vscode-gruvbox-material-p-dark.git"
     },
     "contributes": {
         "themes": [
